Font size helpers.

--- a/src/scss/text.scss
+++ b/src/scss/text.scss
@@ -1,8 +1,10 @@
 // Font Size Helpers
-$sizes: 110, 120, 130, 140, 150, 160, 170, 180, 190, 200;
-@each $size in $sizes {
-    .font-#{$size} {
-        font-size: $size + '%';
+$p: 50;
+@while $p <= 200 {
+    .font-size-#{$p} {
+        font-size: #{$p+'%'} !important;
     }
+
+    $p: $p + 10;
 }
 
