--- a/src/scss/forms.scss
+++ b/src/scss/forms.scss
@@ -4,7 +4,7 @@
 }
 
 .form-control[readonly],
-.from-control[disabled],
+.form-control[disabled],
 input:disabled,
 input:read-only {
     background-color: darken($input-bg, 4%);
